--- a/Server/routes/TODO
+++ b/Server/routes/TODO
@@ -1,7 +1,40 @@
-[] - figure out how to use cookies/auth to protect paths
-[] - figure out error hadling and implement in: 
-    [] - user login
-    [] - user sign up
-    (more soon)
-[] - organize routes better using express router
-[] - (?) Change way login works(auth.js file ?)
+Server: 
+[] - Fix file reading when no file sent - cant read 'buffer' of undefined - employeeController
+[] - Checkout socket IO
+[] - Update DB scripts
+[] - Clean and check DB before presentain
+
+Client: 
+[] - Fix scroller & MaterialTable flinching
+[] - Fix navbar height change when loggin in
+[] - Add new logo
+[] - Add custom alerts
+[] - Add loading spinner
+    [] - Card loading student, teacher, classes
+    [] - loading grades
+[] - Better handling for classes with no students - teacher page
+[] - Add teacher pages to manager user
+[] - Add school year selection for relevant pages
+    [] - 
+[] - Design student and teacher cards from management panels - teacher card jumps
+[] - Fix bug that makes you stay on login screen sometimes ***
+[] - Check for places with rerender and add loader
+[] - Add student to class
+    [] - Change to auto complete?
+    [] - Error - validation not working?
+[] - Pauses before potential out-of-memory crash
+[] - Add avrage grades table
+
+Extra design imporvements 
+[] - home page - ask for ideas
+    [] - Make birthday card nicer
+    [] - Make employee card more elegant consistent
+[] - stats page make everything even and more simple looking
+[] - grade input page
+    [] - Make selector smaller
+[] - Add decent logo
+
+Questions
+[] - When deactivating class/subejct - still show it/act like deleted
+[] - What does current school year affect (except for teacher class page, grading page)
+[] - When looking at subject/age/avg grades - include other school years?
