--- a/Server/routes/TODO
+++ b/Server/routes/TODO
@@ -22,7 +22,7 @@ Client:
 [] - Add student to class
     [] - Change to auto complete?
     [] - Error - validation not working?
-[] - Pauses before potential out-of-memory crash
+[X] - Pauses before potential out-of-memory crash
 [] - Add avrage grades table
 
 Extra design imporvements 
