--- a/Server/routes/TODO
+++ b/Server/routes/TODO
@@ -1,40 +1,48 @@
 Server: 
-[] - Fix file reading when no file sent - cant read 'buffer' of undefined - employeeController
+[X] - Fix file reading when no file sent - cant read 'buffer' of undefined - employeeController
 [] - Checkout socket IO
 [] - Update DB scripts
 [] - Clean and check DB before presentain
 
 Client: 
 [] - Fix scroller & MaterialTable flinching
-[] - Fix navbar height change when loggin in
+[X] - Fix navbar height change when loggin in
 [] - Add new logo
-[] - Add custom alerts
+[X] - Add custom alerts
 [] - Add loading spinner
+    [X] - login
     [] - Card loading student, teacher, classes
     [] - loading grades
 [] - Better handling for classes with no students - teacher page
-[] - Add teacher pages to manager user
+[X] - Add teacher pages to manager user
+    [X] - Student stats page
+    [X] - Grading page
+    [X] - Class managent page
 [] - Add school year selection for relevant pages
     [] - 
 [] - Design student and teacher cards from management panels - teacher card jumps
-[] - Fix bug that makes you stay on login screen sometimes ***
+[X] - Fix bug that makes you stay on login screen sometimes ***
 [] - Check for places with rerender and add loader
 [] - Add student to class
     [] - Change to auto complete?
-    [] - Error - validation not working?
+    [X] - Error - validation not working?
 [X] - Pauses before potential out-of-memory crash
-[] - Add avrage grades table
+[X] - Add avrage grades table
 
 Extra design imporvements 
 [] - home page - ask for ideas
     [] - Make birthday card nicer
-    [] - Make employee card more elegant consistent
-[] - stats page make everything even and more simple looking
-[] - grade input page
-    [] - Make selector smaller
+    [X] - Make employee card more elegant consistent
+[X] - stats page make everything even and more simple looking
+[X] - grade input page
+    [X] - Make selector smaller
 [] - Add decent logo
 
 Questions
-[] - When deactivating class/subejct - still show it/act like deleted
-[] - What does current school year affect (except for teacher class page, grading page)
-[] - When looking at subject/age/avg grades - include other school years?
+[X] - When deactivating class/subejct - still show it/act like deleted
+ - Class - show as inactive - subject show as deleted
+[X] - What does current school year affect (except for teacher class page, grading page)
+[X] - When looking at subject/age/avg grades - include other school years?
+[] - What to use socket io for
+[] - Why only one class per subject and age group for teacher
+[] - Do I show fired teacher in insepction page
